--- a/app/src/main/res/layout/fragment_app_search_id.xml
+++ b/app/src/main/res/layout/fragment_app_search_id.xml
@@ -61,8 +61,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
-                    android:hint="회원가입시 받은 회원번호를 입력하세요 "
-                    android:inputType="number"
+                    android:hint="회원가입시 받은 회원코드를 입력하세요 "
+                    android:inputType="text"
                     android:maxLength="10"
                     android:singleLine="true"
                     android:textSize="14sp" />
