--- a/app/src/main/res/layout/fragment_app_search_pw.xml
+++ b/app/src/main/res/layout/fragment_app_search_pw.xml
@@ -114,7 +114,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="25dp"
                     android:enabled="false"
-                    android:inputType="textPassword"
+                    android:inputType="text"
                     android:maxLength="15"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
