리사이클러뷰 아이템 없을시 없다는 문구 추가

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -126,11 +126,11 @@
                     android:id="@+id/favoirte_default_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="즐겨찾기를 추가해 주세요."
+                    android:layout_marginBottom="30dp"
+                    android:text="아직 찜한 카페가 없어요!"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    android:visibility="invisible"
-                    android:layout_marginBottom="30dp"
+                    android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="@+id/favorite_recyclerView"
                     app:layout_constraintEnd_toEndOf="@+id/favorite_recyclerView"
                     app:layout_constraintStart_toStartOf="@+id/favorite_recyclerView"
