--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -151,6 +151,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/line2">
 
                 <TextView
+                    android:id="@+id/favoirte_default_textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="아직 찜한 카페가 없어요!"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.62" />
+
+                <TextView
                     android:id="@+id/favoriteCafeList2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
