--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -303,6 +303,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/line15">
 
                 <TextView
+                    android:id="@+id/favoirte_default_textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="아직 리뷰가 없어요!"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/moreReview9"
+                    app:layout_constraintVertical_bias="0.42000002" />
+
+                <TextView
                     android:id="@+id/moreReview9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
