--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.WMC" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/brown</item>
         <item name="colorPrimaryVariant">@color/brown</item>   <!-- 상태바(와이파이 배터리 등...) 색상 -->
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
