위치인증 글자 아이콘으로 변경

--- a/app/src/main/res/layout/item_mypage_review.xml
+++ b/app/src/main/res/layout/item_mypage_review.xml
@@ -49,19 +49,24 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <TextView
-                            android:id="@+id/mypage_location_text"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:singleLine="true"
-                            android:text="[위치인증]"
-                            android:textColor="@color/orange"
-                            android:layout_marginStart="7dp"
-                            android:textSize="12sp"
+                        <ImageView
+                            android:id="@+id/location_false_image"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            app:layout_constraintBottom_toBottomOf="@+id/mypageReview_CafeName"
+                            app:layout_constraintStart_toEndOf="@+id/mypageReview_CafeName"
+                            app:layout_constraintTop_toTopOf="@+id/mypageReview_CafeName"
+                            app:srcCompat="@drawable/location_false" />
+
+                        <ImageView
+                            android:id="@+id/location_true_image"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="@+id/mypageReview_CafeName"
                             app:layout_constraintStart_toEndOf="@+id/mypageReview_CafeName"
-                            app:layout_constraintTop_toTopOf="@+id/mypageReview_CafeName" />
+                            app:layout_constraintTop_toTopOf="@+id/mypageReview_CafeName"
+                            app:srcCompat="@drawable/location_true" />
 
                         <TextView
                             android:id="@+id/mypageReview_writeTime"
