--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -82,19 +82,24 @@
                             app:layout_constraintBottom_toBottomOf="@+id/nickName"
                             app:layout_constraintStart_toEndOf="@+id/level" />
 
-                        <TextView
-                            android:id="@+id/moreReview_location_text"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="3dp"
-                            android:singleLine="true"
-                            android:text="[위치인증]"
-                            android:textColor="@color/orange"
-                            android:textSize="10sp"
+                        <ImageView
+                            android:id="@+id/location_false_image"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            app:layout_constraintBottom_toBottomOf="@+id/nickName"
+                            app:layout_constraintStart_toEndOf="@+id/level_and_location"
+                            app:layout_constraintTop_toTopOf="@+id/nickName"
+                            app:srcCompat="@drawable/location_false" />
+
+                        <ImageView
+                            android:id="@+id/location_true_image"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="@+id/nickName"
                             app:layout_constraintStart_toEndOf="@+id/level_and_location"
-                            app:layout_constraintTop_toTopOf="@+id/nickName" />
+                            app:layout_constraintTop_toTopOf="@+id/nickName"
+                            app:srcCompat="@drawable/location_true" />
 
                         <TextView
                             android:id="@+id/reviewMore_writeTime"
