로그인 생략버튼 INVISIBLE처리

--- a/app/src/main/res/layout/fragment_app_login.xml
+++ b/app/src/main/res/layout/fragment_app_login.xml
@@ -149,6 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 android:text="로그인 생략-개발"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
